# trial-accounts

./: .gitignore  README.md  package.json
__tests__/: test.ava.ts  trial-tests.ava.ts
__tests__/utils/: general.ts
contract/: build.sh
contract/src/: lib.rs  parse.rs  sys.rs
mapping-contract/: Cargo.toml
mapping-contract/src/: lib.rs
mapping-contract/src/fungible_tokens/: claims.rs  ft_core.rs  refunds.rs
test/: contract.test.js
trial-contract/: Cargo.toml  build.sh
trial-contract/src/: lib.rs  parse.rs  sys.rs
utils/: config.js
