[package]
name = "trial-accounts"
edition = "2021"
version = "0.1.0"
authors = ["Matt Lockyer <matt@proximity.dev>", "Ben Kurrek <bkurrek@uwaterloo.ca>"]
license = "Apache2"
description = "Give users a seamless no-rug trial to an app on NEAR"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = { version = "0.4.5", default-features = false }
near-sys = "0.2"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
stri= true
panic = "abort"
